--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,10 @@ github_username:  jekyll
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-remote-theme
 
 # Build settings
-theme: alembic-jekyll-theme
+remote_theme: daviddarnes/alembic@main
 #theme: alembic-jekyll-theme
 
 
