Update homepage and members

--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,7 @@ remote_theme: daviddarnes/alembic@main
 #theme: alembic-jekyll-theme
 
 include:
-  - "_photos"
-  - "_photos/_members"
+  - "_members"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
