--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Comparative Sociality and Cognition Lab 
-email: your-email@example.com
+logo: '/assets/photos/Logo.png'
+email: fkanou@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -37,6 +38,21 @@ plugins:
 remote_theme: daviddarnes/alembic@main
 #theme: alembic-jekyll-theme
 
+favicons:
+    512: '/assets/photos/Logo.png'
+
+navigation_header:
+- title: Home
+  url: /
+- title: Members
+  url: /members/
+- title: Projects
+  url: /projects/
+- title: Publications
+  url: /publications/
+- title: Contact Us
+  url: /contact/
+  
 include:
   - "_members"
 
